@@ -4,6 +4,6 @@ WORKDIR /root
 
 COPY target/helloworld-1.1.jar /root/app.jar
 
-EXPOSE 8080
+EXPOSE 8200
 
-CMD java -Xmx1200m -jar app.jar -Xverify:none --spring.profiles.active=docker
+CMD java -Xmx1200m -jar app.jar
